# voxel51-hackathon

./: .gitignore  250801_FoodWasteHackathon_prep_datasets.ipynb  README.md  main.py  pyproject.toml
src/: data_manager.py  trainer.py
